syntax = "proto3";

import "github.com/vine-io/apimachinery/apis/meta/v1/generated.proto";

option go_package = "pb";

enum Op {
    Create = 0;
    Update = 1;
    Delete = 2;
}

message Frame {
    Op op = 1;
    string gvk = 2;
    bytes body = 3;
}

// +gen:dao
// +gen:object
message Epoch {
    // +gen:inline
    v1.TypeMeta type_meta = 1;

    // +gen:primaryKey
    string id = 2;
    int64 term = 3;
    int64 index = 4;
}

// +gen:object
message EpochList {
    // +gen:inline
    v1.TypeMeta type_meta = 1;
    // +gen:inline
    v1.ListMeta list_meta = 2;

    repeated Epoch items = 3;
}

// +gen:dao
// +gen:object
message Product {
    // +gen:inline
    v1.TypeMeta type_meta = 1;

    // +primaryKey
    // +gen:primaryKey
    string id = 2;

    int64 date = 3;
    string company = 4;
}

// +gen:object
message ProductList {
    // +gen:inline
    v1.TypeMeta type_meta = 1;
    // +gen:inline
    v1.ListMeta list_meta = 2;

    repeated Product items = 3;
}

message SnapshotMarshaller {
    repeated Product products = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message CreateProductRequest {
    string company = 1;
}

message CreateProductResponse {
    Product product = 1;
}

// +gen:openapi
service Test {
    // +gen:get=/api/v1/products/{id}
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    // +gen:post=/api/v1/products
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
}